// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<div
  class="sc-bczSft pqjfd"
>
  <h1>
    Foo
  </h1>
</div>
`;

exports[`renders a link with an ampersand 1`] = `
<div
  class="sc-bczSft pqjfd"
>
  <p>
    <a
      href="http://foo.com?foo=bar&baz=blah"
    />
  </p>
</div>
`;

exports[`renders a table 1`] = `
<div
  class="sc-bczSft pqjfd"
>
  <table>
    <thead>
      <tr>
        <th>
          foo
        </th>
        <th>
          bar
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          123
        </td>
        <td>
          456
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders an image 1`] = `
<div
  class="sc-bczSft pqjfd"
>
  <p>
    <img
      alt="foo"
      node="[object Object]"
      src="http://bar/baz.png"
    />
  </p>
</div>
`;
